# letoctf-bot

./: .gitignore  README.md  pyproject.toml
bot/: alembic.ini  dispatcher.py  main.py
bot/api/: client.py  structs.py  urls.py
bot/config/: bot.py  database.py  redis.py  s3.py
bot/database/: models.py  queries.py
bot/database/migrations/: env.py
bot/database/migrations/versions/: 2024_07_25_initialize_tables.py
bot/dialogs/: register.py
bot/dialogs/admin/: register.py
bot/dialogs/admin/menu/: dialog.py  states.py  windows.py
bot/dialogs/admin/notifications/: dialog.py  states.py  windows.py
bot/dialogs/auth/: dialogs.py  states.py  windows.py
bot/dialogs/user/: register.py
bot/dialogs/user/challenges/: dialog.py  states.py  windows.py
bot/dialogs/user/events/: dialog.py  states.py  windows.py
bot/dialogs/user/menu/: dialog.py  windows.py
bot/dialogs/user/notifications/: dialog.py  states.py  windows.py
bot/dialogs/user/scoreboard/: dialog.py  states.py  windows.py
bot/dialogs/user/support/: channels.py  dialog.py  states.py  windows.py
bot/dialogs/user/teams/: dialog.py  states.py  windows.py
bot/handlers/: auth.py
bot/handlers/admin/: notifications.py
bot/handlers/user/: challenges.py  event.py  menu.py  notifications.py  scoreboard.py  support.py  teams.py
bot/routers/: auth.py  filter.py  menu.py  register.py
bot/static/: loader.py
bot/static/templates/: statistics.j2
bot/static/templates/challenge/: list.j2  preview.j2  render.j2
deploy/: Dockerfile  docker-compose.yaml  entrypoint.sh
deploy/config/: .env.sample
(+9 files in other folders)
