[tool.poetry]
name = "ctf-bot"
package-mode = false
version = "0.1.0"
description = ""
authors = ["Ivan Krasnopolsky <i1.krasnopolskiy@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiogram-dialog = "^2.1.0"
aiohttp = "^3.9.5"
alembic = "^1.13.2"
boto3 = "^1.34.149"
mysqlclient = "^2.2.4"
pydantic = "^2.8.2"
pydantic-settings = "^2.3.4"
pyjwt = "^2.8.0"
redis = "^5.0.7"
sqlalchemy = "^2.0.31"
structlog = "^24.4.0"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
isort = "^5.13.2"
pylint = "^3.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.isort]
line_length = 120
profile = "black"

[tool.pylint]
max-line-length = 120
disable = [
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
    "unused-argument",
    "too-few-public-methods",
    "consider-using-f-string",
]
